--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-    	"php": "^7.1"
+    	"php": "^7.1|^8.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^4.3"
+        "phpspec/phpspec": "^6.2"
     },
     "autoload": {
 	"psr-4": {
